--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "solidity-coverage": "^0.8.1",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
-    "typescript": ">=4.5.0"
+    "typescript": ">=4.5.0",
+    "dotenv": "^16.4.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.2"
